Updates tmux options for compatibility with version 3.5

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,20 +1,16 @@
-# UTF-8 by default
-set -g utf8
-set-window-option -g utf8 on
-
 # Vi style
-setw -g mode-keys vi
+set -g mode-keys vi
 
 # 256 colors
 set -g default-terminal "screen-256color"
 set -g history-limit 10000
 
 # Reload ~/.tmux.conf con C-b r
-bind r source-file ~/.tmux.conf \; display "Reloaded!"
+bind r source-file ~/.tmux.conf \; display-message "Reloaded!"
 
-# set window and pane index to 1 (0 by default)
+# Set window and pane index to 1 (0 by default)
 set-option -g base-index 1
-setw -g pane-base-index 1
+set-option -g pane-base-index 1
 
 # Change panels key bindings
 bind h select-pane -L
@@ -22,33 +18,23 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
-# set pane colors - hilight the active pane
-set-option -g pane-border-fg colour235 #base02
-set-option -g pane-active-border-fg colour240 #base01
+# Set pane colors - highlight the active pane
+set-option -g pane-border-style "fg=colour235"
+set-option -g pane-active-border-style "fg=colour240"
 
-# colorize messages in the command line
-set-option -g message-bg black #base02
-set-option -g message-fg brightred #orange
-
-# Colores de la barra de estado
-#set-option -g status-bg colour235
-set-option -g status-bg colour239
-set-option -g status-fg yellow
-set-option -g status-attr dim
+# Colorize messages in the command line
+set-option -g message-style "fg=brightred,bg=black"
 
 # Colores de la barra de estado
-set-window-option -g window-status-fg colour110 # VG ventana activa
-set-window-option -g window-status-bg colour239 # Fondo ventanas inactivas
-set-window-option -g window-status-attr dim
+set-option -g status-style "fg=yellow,bg=colour239,dim"
 
-# Colores de la lista de ventanas
-set-window-option -g window-status-current-fg white
-set-window-option -g window-status-current-bg red
-set-window-option -g window-status-current-attr bright
+# Colores de la barra de estado
+set-window-option -g window-status-style "fg=colour110,bg=colour239,dim"  # Ventanas inactivas
+set-window-option -g window-status-current-style "fg=white,bg=red,bright"  # Ventana activa
 
-## use vim keybindings in copy mode
-#setw -g mode-keys vi
-#
-## setup 'v' to begin selection as in Vim
-#bind-key -t vi-copy v begin-selection
-#bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+## Use vim keybindings in copy mode
+# set -g mode-keys vi  # (ya configurado antes)
+# 
+# setup 'v' to begin selection as in Vim
+#bind-key -T copy-mode-vi v send-keys -X begin-selection
+#bind-key -T copy-mode-vi y send-keys -X copy-pipe "reattach-to-user-namespace pbcopy"
